added to readme

--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
     "toc-nb-collapsed": true
    },
    "source": [
-    "# Final Project Submission"
+    "# King's County Housing"
    ]
   },
   {
